--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 inventory = inventory.yml
 vault_password_file = contrib/vault/vault-keyring-client.py
+roles_path = ./roles
 
 [vault]
 username = ansible-vault
