Adding keep remote flag

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,6 +2,7 @@
 inventory = inventory.yml
 vault_password_file = contrib/vault/vault-keyring-client.py
 roles_path = ./roles
+keep_remote_files = True
 
 [vault]
 username = ansible-vault
